// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preparePolicy report-only preparePolicy 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для billing 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "*",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.yandex.ru",
    "yandex.ru",
    "static.yastatic.net",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "*.yoomoney.ru",
    "an.yandex.ru",
    "yastatic.net",
    "z.moatads.com",
    "storage.mds.yandex.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для моих кредитов 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для промо ОСАГО 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для статей журнала 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
    "*.ampproject.net",
    "*.ampproject.org",
    "amp-error-reporting.appspot.com",
    "view.genial.ly",
    "api.mindbox.ru",
    "top-fwz1.mail.ru",
    "*.ampproject.net",
    "cdn.ampproject.org",
    "googletagmanager.com",
    "www.googletagmanager.com",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
    "platform.twitter.com",
    "syndication.twitter.com",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
    "*.ampproject.net",
    "w.soundcloud.com",
    "coub.com",
    "giphy.com",
    "www.instagram.com",
    "vk.com",
    "login.vk.com",
    "view.genial.ly",
    "player.vimeo.com",
    "docs.google.com",
    "twitter.com",
    "platform.twitter.com",
    "syndication.twitter.com",
    "tochka.com",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
    "*.amazonaws.com/genial.ly/",
    "genially.blob.core.windows.net",
    "platform.twitter.com",
    "syndication.twitter.com",
    "pbs.twimg.com",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "*.ampproject.net",
    "www.instagram.com",
    "vk.com",
    "login.vk.com",
    "api.mindbox.ru",
    "view.genial.ly",
    "*.cloudfront.net",
    "platform.twitter.com",
    "cdn.syndication.twimg.com",
    "cdn.ampproject.org",
    "*.ampproject.net",
    "top-fwz1.mail.ru",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
    "*.cloudfront.net",
    "platform.twitter.com",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для страниц гаража 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;

exports[`preparePolicy стандартный preparePolicy для страниц журнала 1`] = `
Object {
  "child-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
    "mc.yandex.ru",
  ],
  "connect-src": Array [
    "'self'",
    "blob:",
    "an.yandex.ru",
    "strm.yandex.ru",
    "*.strm.yandex.net",
    "verify.yandex.ru",
    "*.verify.yandex.ru",
    "mc.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "matchid.adfox.yandex.ru",
    "adfox.yandex.ru",
    "ads.adfox.ru",
    "ads6.adfox.ru",
    "jstracer.yandex.ru",
    "yastat.net",
    "yandex.ru",
    "awaps.yandex.ru",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.googletagmanager.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "wss://push.yandex.ru",
    "*.google.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "hybrid.ai",
    "soloway.ru",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru yandexmetrica.com https://yandexmetrica.com:*",
    "*.yookassa.ru",
    "*.ampproject.net",
    "*.ampproject.org",
    "amp-error-reporting.appspot.com",
    "view.genial.ly",
    "api.mindbox.ru",
    "top-fwz1.mail.ru",
    "*.ampproject.net",
    "cdn.ampproject.org",
    "googletagmanager.com",
    "www.googletagmanager.com",
  ],
  "default-src": Array [
    "'none'",
  ],
  "font-src": Array [
    "'self'",
    "data:",
    "fonts.googleapis.com",
    "*.gstatic.com",
    "*.yandex.ru",
    "yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "*.yandex.net",
  ],
  "form-action": Array [
    "'self'",
    "money.yandex.ru",
    "*.yandex.net",
    "*.auto.ru",
    "auto.ru",
    "platform.twitter.com",
    "syndication.twitter.com",
  ],
  "frame-ancestors": Array [
    "'self'",
    "*.cm.expert",
    "*.yandex.ru",
    "yandex.ru",
    "*.auto.ru",
    "auto.ru",
  ],
  "frame-src": Array [
    "'self'",
    "widgets.preproduction.cm.expert",
    "widgets.cm.expert",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.avto.ru",
    "*.creativecdn.com",
    "creativecdn.com",
    "*.yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandexadexchange.net",
    "yandexadexchange.net",
    "yastatic.net",
    "*.youtube.com",
    "*.vertis.yandex-team.ru",
    "*.spincar.com",
    "*.google.com",
    "*.google.ru",
    "*.e-credit.one",
    "sravni.ru",
    "*.sravni.ru",
    "*.sravni-team.ru",
    "http://credit-selection.partner.qa.sravni-team.ru",
    "forms.yandex-team.ru",
    "auto.all-evak.ru",
    "auto-sh.fitauto.ru",
    "auto10.fitauto.ru",
    "auto-osen.fitauto.ru",
    "www.renins.ru",
    "promo.koleso.ru",
    "eurorepar.ru.com",
    "*.doubleclick.net",
    "*.googlesyndication.com",
    "mc.yandex.ru mc.yandex.md",
    "*.yoomoney.ru",
    "*.ampproject.net",
    "w.soundcloud.com",
    "coub.com",
    "giphy.com",
    "www.instagram.com",
    "vk.com",
    "login.vk.com",
    "view.genial.ly",
    "player.vimeo.com",
    "docs.google.com",
    "twitter.com",
    "platform.twitter.com",
    "syndication.twitter.com",
    "tochka.com",
  ],
  "img-src": Array [
    "'self'",
    "data:",
    "avatars-fast.yandex.net",
    "favicon.yandex.net",
    "banners.adfox.ru",
    "content.adfox.ru",
    "ads6.adfox.ru",
    "yastat.net",
    "avatars.mds.yandex.net",
    "mc.yandex.ru",
    "*.tns-counter.ru",
    "*.verify.yandex.ru",
    "verify.yandex.ru",
    "ads.adfox.ru",
    "bs.serving-sys.com",
    "ad.adriver.ru",
    "wcm.solution.weborama.fr",
    "wcm-ru.frontend.weborama.fr",
    "mc.admetrica.ru",
    "ad.doubleclick.net",
    "rgi.io",
    "track.rutarget.ru",
    "ssl.hurra.com",
    "px.moatads.com",
    "amc.yandex.ru",
    "gdeby.hit.gemius.pl",
    "tps.doubleverify.com",
    "pixel.adsafeprotected.com",
    "impression.appsflyer.com",
    "'self'",
    "data:",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "*.autoi.ru",
    "*.yandex.net",
    "yandex.net",
    "*.yandex.ru",
    "yandex.ru",
    "yastatic.net",
    "*.ytimg.com",
    "*.storage.yandexcloud.net",
    "http://autoru-panorama.s3.yandex.net",
    "*.google.com",
    "*.google.ru",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.doubleclick.net",
    "ad.mail.ru",
    "*.youtube.com",
    "mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org mc.admetrica.ru",
    "ps.doubleverify.com",
    "*.yoomoney.ru",
    "*.amazonaws.com/genial.ly/",
    "genially.blob.core.windows.net",
    "platform.twitter.com",
    "syndication.twitter.com",
    "pbs.twimg.com",
  ],
  "media-src": Array [
    "*.yandex.net",
    "strm.yandex.ru",
    "*.strm.yandex.ru",
    "yastat.net",
    "data:",
    "blob:",
    "'self'",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.st",
    "yastatic.net",
    "http://autoru-panorama.s3.yandex.net",
  ],
  "object-src": Array [
    "'self'",
    "*.adfox.ru",
    "*.googlesyndication.com",
    "yastatic.net",
  ],
  "report-uri": Array [
    "https://csp-report.yandex.ru/",
  ],
  "script-src": Array [
    "'unsafe-eval'",
    "'unsafe-inline'",
    "'nonce-bGV0IHRoZSBnYWxheHkgYnVybg=='",
    "*.auto.ru",
    "auto.ru",
    "*.adfox.ru",
    "*.yandex.ru",
    "yandex.ru",
    "*.yandex.net",
    "yastatic.net",
    "static.yastatic.net",
    "*.youtube.com",
    "*.ytimg.com",
    "journalcdn.storage.yandexcloud.net",
    "*.googleadservices.com",
    "*.googlesyndication.com",
    "*.gstatic.com",
    "*.ampproject.org",
    "*.doubleclick.net",
    "*.google.com",
    "*.google.ru",
    "*.googletagservices.com",
    "*.yoomoney.ru",
    "mc.yandex.ru mc.yandex.az mc.yandex.by mc.yandex.co.il mc.yandex.com mc.yandex.com.am mc.yandex.com.ge mc.yandex.com.tr mc.yandex.ee mc.yandex.fr mc.yandex.kg mc.yandex.kz mc.yandex.lt mc.yandex.lv mc.yandex.md mc.yandex.ru mc.yandex.tj mc.yandex.tm mc.yandex.ua mc.yandex.uz mc.webvisor.com mc.webvisor.org",
    "forms.yandex-team.ru",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "sravni.ru",
    "*.sravni.ru",
    "*.jsdelivr.net",
    "*.ngenix.net",
    "*.ampproject.net",
    "www.instagram.com",
    "vk.com",
    "login.vk.com",
    "api.mindbox.ru",
    "view.genial.ly",
    "*.cloudfront.net",
    "platform.twitter.com",
    "cdn.syndication.twimg.com",
    "cdn.ampproject.org",
    "*.ampproject.net",
    "top-fwz1.mail.ru",
  ],
  "style-src": Array [
    "'self'",
    "'unsafe-inline'",
    "*.adfox.ru",
    "*.auto.ru",
    "auto.ru",
    "yastatic.net",
    "static.yastatic.net",
    "journalcdn.storage.yandexcloud.net",
    "autoru-mag.s3.yandex.net",
    "fonts.googleapis.com",
    "*.cloudfront.net",
    "platform.twitter.com",
    "fonts.googleapis.com",
  ],
  "worker-src": Array [
    "'self'",
    "*.auto.ru",
    "auto.ru",
  ],
}
`;
